--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 </head>
 <body>
   <h1>ESTAMOS MODIFICANDO PARA EL GITHUB</h1>
+  <h1>CARRUSEL</h1>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg">
+          <h2>primero</h2>
+        </div>
+      </div>
+    </div>
   <div class="container">
     <h1 class="my-5">Notas Finales</h1>
     <div class="row mb-2">
